listed products and added field to product schema

--- a/view/admin/edit_brand.ejs
+++ b/view/admin/edit_brand.ejs
@@ -26,7 +26,15 @@
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
               />
           </label>
-          <img src="/brand_img/<%= brand[0].image %>" alt="" width="100px" srcset="">
+          <img src="/brand_img/<%= brand[0].image %>" alt="" width="100px" >
+
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Description</span>
+            <textarea
+              name="description"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              required/><%= brand[0].description %></textarea>
+          </label>
 
           <button type="submit"
             class="px-5 py-3 mt-8 w-full font-medium w-64 leading-5 text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
