--- a/view/user/shop.ejs
+++ b/view/user/shop.ejs
@@ -31,31 +31,31 @@
                             <div class="widgets_inner">
                                 <ul class="list">
                                     <li>
-                                        <a href="#">Frozen Fish</a>
+                                        <a href="#">Furniture</a>
                                         <span>(250)</span>
                                     </li>
                                     <li>
-                                        <a href="#">Dried Fish</a>
+                                        <a href="#">Wall Accent</a>
                                         <span>(250)</span>
                                     </li>
                                     <li>
-                                        <a href="#">Fresh Fish</a>
+                                        <a href="#">Lighting</a>
                                         <span>(250)</span>
                                     </li>
                                     <li>
-                                        <a href="#">Meat Alternatives</a>
+                                        <a href="#">Garden & Outdoor</a>
                                         <span>(250)</span>
                                     </li>
                                     <li>
-                                        <a href="#">Fresh Fish</a>
+                                        <a href="#">Sofa & Reclainers</a>
                                         <span>(250)</span>
                                     </li>
                                     <li>
-                                        <a href="#">Meat Alternatives</a>
+                                        <a href="#">Storage</a>
                                         <span>(250)</span>
                                     </li>
                                     <li>
-                                        <a href="#">Meat</a>
+                                        <a href="#">Beds & Mattress</a>
                                         <span>(250)</span>
                                     </li>
                                 </ul>
