--- a/view/admin/brand.ejs
+++ b/view/admin/brand.ejs
@@ -17,7 +17,7 @@
       </a>
       </button>     
 
-        <table class="w-full whitespace-no-wrap">
+        <table class="w-full whitespace-no-wrap mt-4">
           <thead>
             <tr
               class="text-xs font-semibold tracking-wide text-left text-gray-500 uppercase border-b dark:border-gray-700 bg-gray-50 dark:text-gray-400 dark:bg-gray-800"
