--- a/view/admin/edit_product.ejs
+++ b/view/admin/edit_product.ejs
@@ -18,31 +18,54 @@
           </label>
 
           <label class="block mt-4 text-sm">
-            <span class="text-gray-700 dark:text-gray-400">Brand</span>
-            <input
-              name="brand" value="<%= product.brand %>"
-              type="text"
-              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-              
-            />
+            <span class="text-gray-700 dark:text-gray-400"> Brand </span>
+            <select
+              name="brand"
+              class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray"
+            >
+            <option value="<%= product.brand._id %>" selected ><%= product.brand.title %></option>
+            <% brand.forEach(el => { %>
+              <option value="<%= el._id %>"><%= el.title %></option>
+              <% }) %>
+            <!-- <option value="Furniture">Furniture</option>
+            <option value="Wall Accent">Wall Accent</option>
+            <option value="Lighting">Lighting</option>
+            <option value="Garden & Outdoor">Garden & Outdoor</option>
+            <option value="Sofa & Recliners">Sofa & Recliners</option>
+            <option value="Storage">Storage</option>
+            <option value="Beds & Mattress">Beds & Mattress</option> -->
+            </select>
           </label>
-
           <label class="block mt-4 text-sm">
             <span class="text-gray-700 dark:text-gray-400"> Category </span>
             <select
               name="category"
               class="block w-full mt-1 text-sm dark:text-gray-300 dark:border-gray-600 dark:bg-gray-700 form-select focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:focus:shadow-outline-gray"
             >
-            <option value="<%= product.category %>" selected ><%= product.category %></option>
-            <option value="Furniture">Furniture</option>
+            <option value="<%= product.category._id %>" selected ><%= product.category.title %></option>
+            <% category.forEach(el => { %>
+              <option value="<%= el._id %>"><%= el.title %></option>
+              <% }) %>
+            <!-- <option value="Furniture">Furniture</option>
             <option value="Wall Accent">Wall Accent</option>
             <option value="Lighting">Lighting</option>
             <option value="Garden & Outdoor">Garden & Outdoor</option>
             <option value="Sofa & Recliners">Sofa & Recliners</option>
             <option value="Storage">Storage</option>
-            <option value="Beds & Mattress">Beds & Mattress</option>
+            <option value="Beds & Mattress">Beds & Mattress</option> -->
             </select>
           </label>
+
+          
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Thumbnail</span>
+            <input
+              name="thumbnail"
+              type="file"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"/>
+          </label>
+
+            <img src="/product_img/<%= product.thumbnail %>" alt="" width="100px" class="edit-image-show">
 
           <label class="block mt-4 text-sm">
             <span class="text-gray-700 dark:text-gray-400">Images</span>
@@ -64,6 +87,61 @@
             <input
               name="price" value="<%= product.price %>"
               type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
+
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Width</span>
+            <input
+              name="width" value="<%= product.width %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Breadth</span>
+            <input
+              name="breadth"  value="<%= product.breadth %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Height</span>
+            <input
+              name="height"  value="<%= product.height %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Warranty</span>
+            <input
+              name="warranty"  value="<%= product.warranty %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Weight</span>
+            <input
+              name="weight"  value="<%= product.weight %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Material</span>
+            <input
+              name="material" value="<%= product.material %>"
+              type="text"
               class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
               
             />
