--- a/view/user/p_details.ejs
+++ b/view/user/p_details.ejs
@@ -2,7 +2,7 @@
 <%- include('partials/header.ejs') %>
  
  <!-- breadcrumb start-->
-  <section class="breadcrumb breadcrumb_bg">
+  <!-- <section class="breadcrumb breadcrumb_bg">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -15,7 +15,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- breadcrumb start-->
   <!--================End Home Banner Area =================-->
 
@@ -23,41 +23,48 @@
   <div class="product_image_area section_padding">
     <div class="container">
       <div class="row s_product_inner justify-content-between">
+        
         <div class="col-lg-7 col-xl-7">
           <div class="product_slider_img">
             <div id="vertical">
-              <div data-thumb="/user/img/product/single-product/product_1.png">
+              <div data-thumb="/product_img/<%= product.thumbnail %>">
+                <img src="/product_img/<%= product.thumbnail %>" />
+              </div>
+              <% product.images.forEach(element => { %>
+                <div data-thumb="/product_img/<%= element %>">
+                  <img src="/product_img/<%= element %>" />
+                </div>
+              <% }) %>
+                
+
+              <!-- <div data-thumb="/user/img/product/single-product/product_1.png">
                 <img src="/user/img/product/single-product/product_1.png" />
               </div>
               <div data-thumb="/user/img/product/single-product/product_1.png">
                 <img src="/user/img/product/single-product/product_1.png" />
-              </div>
-              <div data-thumb="/user/img/product/single-product/product_1.png">
-                <img src="/user/img/product/single-product/product_1.png" />
-              </div>
-              <div data-thumb="/user/img/product/single-product/product_1.png">
-                <img src="/user/img/product/single-product/product_1.png" />
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
+
         <div class="col-lg-5 col-xl-4">
           <div class="s_product_text">
             <h5>previous <span>|</span> next</h5>
-            <h3>Faded SkyBlu Denim Jeans</h3>
-            <h2>$149.99</h2>
+            <h3><%= product.title %> </h3>
+            <h2><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-currency-rupee" viewBox="0 0 16 16">
+              <path d="M4 3.06h2.726c1.22 0 2.12.575 2.325 1.724H4v1.051h5.051C8.855 7.001 8 7.558 6.788 7.558H4v1.317L8.437 14h2.11L6.095 8.884h.855c2.316-.018 3.465-1.476 3.688-3.049H12V4.784h-1.345c-.08-.778-.357-1.335-.793-1.732H12V2H4v1.06Z"/>
+          </svg><%= product.price %> </h2>
             <ul class="list">
               <li>
                 <a class="active" href="#">
-                  <span>Category</span> : Household</a>
+                  <span>Category</span> : <%= product.category.title %></a>
               </li>
               <li>
                 <a href="#"> <span>Availibility</span> : In Stock</a>
               </li>
             </ul>
             <p>
-              First replenish living. Creepeth image image. Creeping can't, won't called.
-              Two fruitful let days signs sea together all land fly subdue
+              <%= product.description %>
             </p>
             <div class="card_area d-flex justify-content-between align-items-center">
               <div class="product_count">
@@ -99,23 +106,8 @@
       <div class="tab-content" id="myTabContent">
         <div class="tab-pane fade" id="home" role="tabpanel" aria-labelledby="home-tab">
           <p>
-            Beryl Cook is one of Britain’s most talented and amusing artists
-            .Beryl’s pictures feature women of all shapes and sizes enjoying
-            themselves .Born between the two world wars, Beryl Cook eventually
-            left Kendrick School in Reading at the age of 15, where she went
-            to secretarial school and then into an insurance office. After
-            moving to London and then Hampton, she eventually married her next
-            door neighbour from Reading, John Cook. He was an officer in the
-            Merchant Navy and after he left the sea in 1956, they bought a pub
-            for a year before John took a job in Southern Rhodesia with a
-            motor company. Beryl bought their young son a box of watercolours,
-            and when showing him how to use it, she decided that she herself
-            quite enjoyed painting. John subsequently bought her a child’s
-            painting set for her birthday and it was with this that she
-            produced her first significant work, a half-length portrait of a
-            dark-skinned lady with a vacant expression and large drooping
-            breasts. It was aptly named ‘Hangover’ by Beryl’s husband and
-          </p>
+            <%= product.brand.description %>
+          </p><br><br>
           <p>
             It is often frustrating to attempt to plan meals that are designed
             for one. Despite this fact, we are seeing more and more recipe
@@ -137,7 +129,7 @@
                     <h5>Width</h5>
                   </td>
                   <td>
-                    <h5>128mm</h5>
+                    <h5><%= product.width %> inch</h5>
                   </td>
                 </tr>
                 <tr>
@@ -145,7 +137,7 @@
                     <h5>Height</h5>
                   </td>
                   <td>
-                    <h5>508mm</h5>
+                    <h5><%= product.height %> inch</h5>
                   </td>
                 </tr>
                 <tr>
@@ -153,7 +145,7 @@
                     <h5>Depth</h5>
                   </td>
                   <td>
-                    <h5>85mm</h5>
+                    <h5><%= product.breadth %> inch</h5>
                   </td>
                 </tr>
                 <tr>
@@ -161,7 +153,7 @@
                     <h5>Weight</h5>
                   </td>
                   <td>
-                    <h5>52gm</h5>
+                    <h5><%= product.weight %> kg</h5>
                   </td>
                 </tr>
                 <tr>
@@ -174,26 +166,18 @@
                 </tr>
                 <tr>
                   <td>
-                    <h5>Freshness Duration</h5>
+                    <h5>Warranty</h5>
                   </td>
                   <td>
-                    <h5>03days</h5>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <h5>When packeting</h5>
-                  </td>
-                  <td>
-                    <h5>Without touch of hand</h5>
+                    <h5><%= product.warranty %> months</h5>
                   </td>
                 </tr>
                 <tr>
                   <td>
-                    <h5>Each Box contains</h5>
+                    <h5>Material</h5>
                   </td>
                   <td>
-                    <h5>60pcs</h5>
+                    <h5><%= product.material %></h5>
                   </td>
                 </tr>
               </tbody>
