rupee symbol added to product mangement

--- a/view/admin/product_management.ejs
+++ b/view/admin/product_management.ejs
@@ -63,7 +63,7 @@
 
                 </div>
                 </td>
-                <td class="px-4 py-3 text-sm">$ <%= products[i].price %></td>
+                <td class="px-4 py-3 text-sm">₹ <%= products[i].price %></td>
                 <td class="px-4 py-3 text-xs">
                   <span
                     class="px-2 py-1 font-semibold leading-tight text-green-700 bg-green-100 rounded-full dark:bg-green-700 dark:text-green-100"
