wishlist page,cart and wishlist models

--- a/view/admin/edit_product.ejs
+++ b/view/admin/edit_product.ejs
@@ -165,7 +165,15 @@
               </button>
             </div>
           </label> -->
-
+          <label class="block mt-4 text-sm">
+            <span class="text-gray-700 dark:text-gray-400">Stock</span>
+            <input
+              name="stock" value="<%= product.stock %>"
+              type="number"
+              class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
+              
+            />
+          </label>
           <label class="block mt-4 text-sm">
             <span class="text-gray-700 dark:text-gray-400">Description</span>
             <textarea
