--- a/view/admin/partials/footer.ejs
+++ b/view/admin/partials/footer.ejs
@@ -77,7 +77,7 @@
   </div>  
   <!-- End of modal backdrop -->
   <script>
-    function modalSaveDetails([header,description,...images]){
+    function modalSaveDetails([header,description,images]){
       // document.getElementById('modal-header').innerHTML=dataObj[0];
       // document.getElementById('modal-description').innerHTML=dataObj[1];
       document.getElementById('modal-header').innerHTML=header;
