--- a/view/user/cart.ejs
+++ b/view/user/cart.ejs
@@ -2,7 +2,7 @@
     <%- include('partials/header.ejs') %>
   <!--================Home Banner Area =================-->
   <!-- breadcrumb start-->
-  <section class="breadcrumb breadcrumb_bg">
+  <!-- <section class="breadcrumb breadcrumb_bg">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-lg-8">
@@ -15,7 +15,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- breadcrumb start-->
 
   <!--================Cart Area =================-->
@@ -191,4 +191,5 @@
       </div>
   </section>
   <!--================End Cart Area =================-->
+  
   <%- include('partials/footer.ejs') %>
