--- a/view/user/shop.ejs
+++ b/view/user/shop.ejs
@@ -2,7 +2,7 @@
 
 
     <!-- breadcrumb start-->
-    <section class="breadcrumb breadcrumb_bg">
+    <!-- <section class="breadcrumb breadcrumb_bg">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8">
@@ -15,7 +15,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- breadcrumb start-->
 
     <!--================Category Product Area =================-->
