--- a/view/user/shop.ejs
+++ b/view/user/shop.ejs
@@ -1,5 +1,8 @@
 <%- include('partials/header.ejs') %>
 
+<% if (msg.length>0) { %>
+    <script defer>alert('<%= msg %>')</script>
+   <% } %>
 
     <!-- breadcrumb start-->
     <!-- <section class="breadcrumb breadcrumb_bg">
@@ -156,7 +159,17 @@
                                         <h3><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-currency-rupee" viewBox="0 0 16 16">
                                             <path d="M4 3.06h2.726c1.22 0 2.12.575 2.325 1.724H4v1.051h5.051C8.855 7.001 8 7.558 6.788 7.558H4v1.317L8.437 14h2.11L6.095 8.884h.855c2.316-.018 3.465-1.476 3.688-3.049H12V4.784h-1.345c-.08-.778-.357-1.335-.793-1.732H12V2H4v1.06Z"/>
                                         </svg><%= element.price %></h3>
-                                        <a href="/add-to-cart/" class="add_cart">+ add to cart</a><a href=""><i class="ti-heart"></i></a>
+                                        <a href="/add-to-cart/<%= element._id %>" class="add_cart">+ add to cart</a> 
+
+                                        <% if (wishlistProducts.products.some(el => el.product.equals(element._id))) {  %>
+                                            <a href="/remove-from-wishlist/<%= element._id %>"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart-fill" viewBox="0 0 16 16">
+                                                <path fill-rule="evenodd" d="M8 1.314C12.438-3.248 23.534 4.735 8 15-7.534 4.736 3.562-3.248 8 1.314z"/>
+                                              </svg></i></a>
+                                        <% }else{ %>
+                                        <a href="/add-to-wishlist/<%= element._id %>"><i><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+                                            <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+                                          </svg></i></a>
+                                        <% } %>
                                     </div>
                                 </div>
                             </div>
