--- a/view/user/wishlist.ejs
+++ b/view/user/wishlist.ejs
@@ -22,16 +22,16 @@
   <div class="container">
     <% if (wishlist.length>0) { %>
 
-    <h2>Your Address</h2>
+    <h2>Your Wishlist</h2>
     <div class="row align-items-center latest_product_inner">
       <% wishlist.forEach(element => { %>
       <div class="col-lg-4 col-sm-6">
         <div class="single_product_item">
-          <img src="img/product/product_1.png" alt="" />
+          <img src="product_img/<%= element.product.thumbnail %> " alt="" />
           <div class="single_product_text">
-            <h4>Quartz Belt Watch</h4>
-            <h3>$150.00</h3>
-            <a href="#" class="add_cart">+ add to cart<i class="ti-heart"></i></a>
+            <h4><%= element.product.title%></h4>
+            <h3>₹ <%= element.product.price %></h3>
+            <a href="#" class="add_cart">+ add to cart</a>
           </div>
         </div>
       </div>
