--- a/view/user/cart.ejs
+++ b/view/user/cart.ejs
@@ -31,39 +31,46 @@
                 <th scope="col">Product</th>
                 <th scope="col">Price</th>
                 <th scope="col">Quantity</th>
-                <th scope="col">Total</th>
+                <th scope="col" width="100px">Total</th>
               </tr>
             </thead>
             <tbody>
-              <% cart.forEach(element => { %>
- 
+              <% for (let i = 0; i < cart.length; i++) {%>
 
-              <tr>
+              <tr id="qnty<%= i %>">
                 <td>
                   <div class="media">
                     <div class="d-flex">
-                      <img src="/user/img/product/single-product/cart-1.jpg" alt="" />
+                      <img src="/product_img/<%= cart[i].product.thumbnail %>" width="147px" />
                     </div>
                     <div class="media-body">
-                      <p>Minimalistic shop for multipurpose use</p>
+                      <p><%= cart[i].product.title %></p>
                     </div>
                   </div>
                 </td>
                 <td>
-                  <h5>$360.00</h5>
+                  <h5>₹ <span class="item-price"><%= cart[i].product.price %></span></h5>
                 </td>
                 <td>
-                  <div class="product_count">
-                    <span class="input-number-decrement"> <i class="ti-angle-down"></i></span>
-                    <input class="input-number" type="text" value="1" min="0" max="10">
-                    <span class="input-number-increment"> <i class="ti-angle-up"></i></span>
-                  </div>
+                  <div class="input-group" style="width: 125px;">
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-dark btn-number" onclick="quantityDec('<%= cart[i].product._id %>','<%= cart[i].quantity %>','<%= i %>')" >
+                          <span>-</span>
+                        </button>
+                    </span>
+                    <input type="number" id="quantity" name="quantity" class="form-control" value="<%= cart[i].quantity %>" min="1" max="10" disabled>
+                    <span class="input-group-btn">
+                        <button type="button" class="btn btn-dark btn-number" onclick="quantityInc('<%= cart[i].product._id %>','<%= cart[i].quantity %>','<%= i %>')">
+                            <span>+</span>
+                        </button>
+                    </span>
+                </div>
                 </td>
                 <td>
-                  <h5>$720.00</h5>
+                  <h5>₹ <span class="sub-total"></span></h5>
                 </td>
               </tr>
-              <% }) %>
+              <% } %>
 
               <tr class="bottom_button">
                 <td>
@@ -84,7 +91,7 @@
                   <h5>Subtotal</h5>
                 </td>
                 <td>
-                  <h5>$2160.00</h5>
+                  <h5>₹ <span id="total"></span></h5>
                 </td>
               </tr>
               <tr class="shipping_area">
@@ -145,5 +152,63 @@
       </div>
   </section>
   <!--================End Cart Area =================-->
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+  <script defer>
+    cartUpdate();
+    function cartUpdate(){
+      let sum=0;
+      for(let i=0;i<'<%=cart.length%>';i++){
+        let itemPrice = Number(document.querySelector(`#qnty${i} .item-price`).innerHTML);
+        let itemQuantity = Number(document.querySelector(`#qnty${i} #quantity`).value);
+        let subTotal = itemPrice*itemQuantity;
+        document.querySelector(`#qnty${i} .sub-total`).innerHTML=subTotal;
+        sum=sum+subTotal;
+      }
+      document.querySelector(`#total`).innerHTML=sum;
+    }
+      
+
+    function quantityDec(id,quantity,index){
+      if(!(document.querySelector(`#qnty${index} #quantity`).value)){
+        document.querySelector(`#qnty${index} #quantity`).value=Number(quantity)
+      }
+      
+      if((document.querySelector(`#qnty${index} #quantity`).value)>1){
+      axios.post('/cart/dec-quantity',{
+        productId:id,
+      }).then((result)=>{
+        if(result.data.stat){
+          let count = Number(document.querySelector(`#qnty${index} #quantity`).value);
+          count--;
+          document.querySelector(`#qnty${index} #quantity`).value = count;
+        }
+        cartUpdate()
+      }).catch((err)=>{
+        console.log({"error":err});
+      })
+    }}
+
+    function quantityInc(id,quantity,index){
+      if(!(document.querySelector(`#qnty${index} #quantity`).value)){
+        document.querySelector(`#qnty${index} #quantity`).value=Number(quantity)
+      }
+      if((document.querySelector(`#qnty${index} #quantity`).value)<10){
+        axios.post('/cart/inc-quantity',{
+          productId:id,
+        }).then((result)=>{
+          if(result.data.stat){
+            let count =Number(document.querySelector(`#qnty${index} #quantity`).value)
+            count ++;
+            document.querySelector(`#qnty${index} #quantity`).value=count;
+          }
+          cartUpdate();
+        }).catch((err)=>{
+          console.log({"error":err});
+        })
+      }
+    }
+</script>
 
   <%- include('partials/footer.ejs') %>
