user side commands given

--- a/view/user/otp_page_signup.ejs
+++ b/view/user/otp_page_signup.ejs
@@ -1,21 +1,5 @@
 <%- include('partials/header.ejs') %>
 
-<!-- breadcrumb start-->
-<!-- <section class="breadcrumb breadcrumb_bg">
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-8">
-        <div class="breadcrumb_iner">
-          <div class="breadcrumb_iner_item">
-            <h2>Log In</h2>
-            <p>Home <span>-</span> Log In</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
-<!-- breadcrumb start-->
 
 <!--================login_part Area =================-->
 <section class="login_part padding_top">
@@ -32,7 +16,7 @@
         <div class="col-md-12 form-group">
 
           <button type="submit" value="submit" class="btn_3">Log in</button>
-          <a class="lost_pass" href="#">Resent OTP</a>
+          <!-- <a class="lost_pass" href="#">Resent OTP</a> -->
         </div>
       </form>
     </div>
