used middlewares for user login , blocked user

--- a/view/user/home.ejs
+++ b/view/user/home.ejs
@@ -46,7 +46,7 @@
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
                                     <a href="/product-details">
-                                        <img src="/user/img/banner_img.png" alt="">
+                                        <img src="/user/img/banner-1.png" alt="">
                                     </a>
 
                                 </div>
@@ -66,7 +66,7 @@
                                 </div>
                                 <div class="banner_img d-none d-lg-block">
                                     <a href="/product-details">
-                                        <img src="/user/img/banner_img.png" alt="">
+                                        <img src="/user/img/banner-1.png" alt="">
                                     </a>
 
                                 </div>
