--- a/view/admin/partials/header.ejs
+++ b/view/admin/partials/header.ejs
@@ -27,6 +27,7 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
         <!-- You need focus-trap.js to make the modal accessible -->
         <script src="/admin/assets/js/focus-trap.js" defer></script>
+        <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
   </head>
   <body>
@@ -611,7 +612,7 @@
                     <li class="flex">
                       <a
                         class="inline-flex items-center w-full px-2 py-1 text-sm font-semibold transition-colors duration-150 rounded-md hover:bg-gray-100 hover:text-gray-800 dark:hover:bg-gray-800 dark:hover:text-gray-200"
-                        href="#"
+                        href="/admin/logout"
                       >
                         <svg
                           class="w-4 h-4 mr-3"
