--- a/view/admin/dashboard.ejs
+++ b/view/admin/dashboard.ejs
@@ -673,5 +673,28 @@
       </div>
     </div>
   </main>
+  <% if (msg.length>0) { %>
+    <script>
+      alertMsg('<%= msg %>')
+      function alertMsg(msg) {
+        const Toast = Swal.mixin({
+          toast: true,
+          position: 'top-end',
+          showConfirmButton: false,
+          timer: 3000,
+          timerProgressBar: true,
+          didOpen: (toast) => {
+            toast.addEventListener('mouseenter', Swal.stopTimer);
+            toast.addEventListener('mouseleave', Swal.resumeTimer);
+          },
+        });
+  
+        Toast.fire({
+          icon: 'success',
+          title: msg,
+        });
+      }
+    </script>
+    <% } %>
 
   <%- include('partials/footer.ejs') %>
