--- a/view/admin/login.ejs
+++ b/view/admin/login.ejs
@@ -8,9 +8,11 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="/admin/assets/css/tailwind.output.css" />
     <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
     <script src="/admin/assets/js/init-alpine.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </head>
   <body>
     <div class="flex items-center min-h-screen p-6 bg-gray-50 dark:bg-gray-900">
@@ -34,24 +36,30 @@
             <div class="w-full">
               <form action="/admin" method="post">
                 <h1 class="mb-4 text-xl font-semibold text-gray-700 dark:text-gray-200">Login</h1>
+
                 <label class="block text-sm">
                   <span class="text-gray-700 dark:text-gray-400">Email</span>
                   <input
                     class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                    type="email" name="email" placeholder="janedoe@gmail.com" required
+                    type="email"
+                    name="email"
+                    placeholder="janedoe@gmail.com"
+                    required
                   />
                 </label>
                 <label class="block mt-4 text-sm">
                   <span class="text-gray-700 dark:text-gray-400">Password</span>
                   <input
                     class="block w-full mt-1 text-sm dark:border-gray-600 dark:bg-gray-700 focus:border-purple-400 focus:outline-none focus:shadow-outline-purple dark:text-gray-300 dark:focus:shadow-outline-gray form-input"
-                    name="password" placeholder="***************" required
+                    name="password"
+                    placeholder="***************"
+                    required
                     type="password"
                   />
                 </label>
 
                 <!-- You should use a button here, as the anchor is only used for the example  -->
-                
+
                 <button type="submit">
                   <a
                     class="block w-full px-4 py-2 mt-4 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-purple-600 border border-transparent rounded-lg active:bg-purple-600 hover:bg-purple-700 focus:outline-none focus:shadow-outline-purple"
@@ -60,8 +68,8 @@
                   </a>
                 </button>
               </form>
-                <hr class="my-8" />
-
+              <!-- <hr class="my-8" /> -->
+              <!-- 
                 <button
                   class="flex items-center justify-center w-full px-4 py-2 text-sm font-medium leading-5 text-white text-gray-700 transition-colors duration-150 border border-gray-300 rounded-lg dark:text-gray-400 active:bg-transparent hover:border-gray-500 focus:border-gray-500 active:text-gray-500 focus:outline-none focus:shadow-outline-gray"
                 >
@@ -81,9 +89,9 @@
                     />
                   </svg>
                   Twitter
-                </button>
+                </button> -->
 
-                <p class="mt-4">
+              <!-- <p class="mt-4">
                   <a
                     class="text-sm font-medium text-purple-600 dark:text-purple-400 hover:underline"
                     href="./forgot-password.html"
@@ -98,12 +106,34 @@
                   >
                     Create account
                   </a>
-                </p>
-              
+                </p> -->
             </div>
           </div>
         </div>
       </div>
     </div>
+    <% if (msg.length>0) { %>
+    <script>
+      alertMsg('<%= msg %>')
+      function alertMsg(msg) {
+        const Toast = Swal.mixin({
+          toast: true,
+          position: 'top-end',
+          showConfirmButton: false,
+          timer: 3000,
+          timerProgressBar: true,
+          didOpen: (toast) => {
+            toast.addEventListener('mouseenter', Swal.stopTimer);
+            toast.addEventListener('mouseleave', Swal.resumeTimer);
+          },
+        });
+
+        Toast.fire({
+          icon: 'error',
+          title: msg,
+        });
+      }
+    </script>
+    <% } %>
   </body>
 </html>
