--- a/view/user/partials/footer.ejs
+++ b/view/user/partials/footer.ejs
@@ -98,8 +98,10 @@
         </div>
     </div>
 </footer>
+<script src="/user/js/dev.js"></script>
 <!--::footer_part end::-->
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <!-- jquery plugins here-->
 <!-- jquery -->
 <script src="/user/js/jquery-1.12.1.min.js"></script>
