--- a/view/user/partials/footer.ejs
+++ b/view/user/partials/footer.ejs
@@ -98,10 +98,16 @@
         </div>
     </div>
 </footer>
-<script src="/user/js/dev.js"></script>
 <!--::footer_part end::-->
+
+<!-- axios  -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
+<!-- Sweetalert  -->
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- sweetalert for actions -->
+<script src="/user/js/customSweetAlert.js"></script>
+<!-- deveoper axios functions -->
+<script src="/user/js/dev.js"></script>
 <!-- jquery plugins here-->
 <!-- jquery -->
 <script src="/user/js/jquery-1.12.1.min.js"></script>
